--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,11 @@
             <artifactId>spring-boot</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.13</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
