--- a/pom.xml
+++ b/pom.xml
@@ -297,6 +297,11 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.3.9</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
