--- a/pom.xml
+++ b/pom.xml
@@ -322,6 +322,11 @@
             <artifactId>springfox-spring-web</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>3.2.7</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
