--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,13 @@
 server:
-  port: 5007
+  port: 5008
 spring:
   main:
     allow-circular-references: true
   data:
     mongodb:
-      uri: mongodb://localhost:27017/AuthModule
-#      mail:
-#        host: smtp.office365.com
-#        port: 587
-#        username: dency.g@techroversolutions.com
-#        password: Rakshit@05
 
+      uri: mongodb+srv://nilusroy0:gTKbIhWYQI2Vck80@cluster0.rihh4ek.mongodb.net/AuthModule?retryWrites=true&w=majority
+#  mongodb://localhost:27017/AuthModule
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
