--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 5008
+  port: 5009
 spring:
   main:
     allow-circular-references: true
@@ -7,7 +7,7 @@ spring:
     mongodb:
 
       uri: mongodb+srv://nilusroy0:gTKbIhWYQI2Vck80@cluster0.rihh4ek.mongodb.net/AuthModule?retryWrites=true&w=majority
-#  mongodb://localhost:27017/AuthModule
+#      uri:  mongodb://localhost:27017/AuthModule
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
