--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,17 @@
 <!--            <artifactId>aspectjweaver</artifactId>-->
 <!--        </dependency>-->
         <!-- Springfox implementation of the Swagger specification -->
-
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-swagger2.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
